--- a/package.json
+++ b/package.json
@@ -24,16 +24,17 @@
   "devDependencies": {
     "@babel/core": "^7.11.1",
     "@babel/preset-env": "^7.11.0",
+    "@webpack-cli/serve": "^2.0.5",
     "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.1",
     "html-webpack-plugin": "^4.3.0",
-    "mocha": "^8.1.1",
+    "mocha": "^10.2.0",
     "style-loader": "^1.2.1",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
     "dat.gui": "^0.7.7"
